<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="element-properties">
    <PreferenceCategory android:title="@string/label_cat_properties">
        <PreferenceScreen
            android:key="element-properties content"
            android:summary="@string/description_content"
            android:title="@string/label_content">
            <PreferenceScreen
                android:key="element-properties content background"
                android:summary="@string/placeholder_none"
                android:title="@string/label_background">
                <PreferenceScreen
                    android:key="element-properties content background type-image"
                    android:summary="@string/description_select_resource"
                    android:title="@string/label_select_resource" />
                <com.jrummyapps.android.colorpicker.ColorPreference
                    android:key="element-properties content background type-color"
                    android:summary="@string/description_select_color"
                    android:title="@string/label_select_color"
                    app:cpv_showAlphaSlider="true"
                    app:cpv_colorShape="circle"
                    app:cpv_dialogType="custom"/>
            </PreferenceScreen>
            <EditTextPreference
                android:key="element-properties content text"
                android:summary="@string/placeholder_none"
                android:title="@string/label_edit_text" />
            <com.jrummyapps.android.colorpicker.ColorPreference
                android:key="element-properties content text-color"
                android:summary="@string/placeholder_none"
                android:title="@string/label_text_color"
                app:cpv_showAlphaSlider="true"
                app:cpv_colorShape="circle"
                app:cpv_dialogType="custom"/>
            <PreferenceScreen
                android:key="element-properties content border"
                android:summary="@string/placeholder_none"
                android:title="@string/label_border" />
            <PreferenceScreen
                android:enabled="false"
                android:key="element-properties content disabled"
                android:selectable="false"
                android:summary="@string/description_text_disabled"
                android:title="@string/label_text_disabled" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="element-properties layout"
            android:summary="@string/description_layout"
            android:title="@string/label_layout">

        </PreferenceScreen>
        <PreferenceScreen
            android:enabled="false"
            android:key="element-properties behaviour"
            android:summary="@string/description_behaviour"
            android:title="@string/label_behaviour">

        </PreferenceScreen>
    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="element-properties lock"
        android:title="@string/label_lock_element"
        android:summary="@string/description_lock_element"/>


</PreferenceScreen>